--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     <a id="about">
         <div id="content2 " class="about-content">
             <h1>About Me
-                <h4 class="smallabout"> Software Developer with a main focus on .NET framework, Azure Cloud and Microsoft development tools.<br>
-                     Microsoft Sql Database, Windows Network, administration and client-server design and setup.</h4></h1><br>
+                <h4 class="smallabout"> I'm proficient in using programming languages such as C# and VB.NET to develop applications for different platforms, 
+                    including web, desktop, and mobile.</h4></h1><br>
           
          
                 <ul class="about-p">                
